
  NEW FEATURES

    HDFS-8155. Support OAuth2 in WebHDFS. (jghoman)

  IMPROVEMENTS

    HDFS-8432. Introduce a minimum compatible layout version to allow downgrade
    in more rolling upgrade use cases. (cnauroth)
    
    HDFS-4396. Add START_MSG/SHUTDOWN_MSG for ZKFC
    (Liang Xie via harsh)

    HDFS-6860. BlockStateChange logs are too noisy. (Chang Li and xyao via xyao)

    HDFS-8549. Abort the balancer if an upgrade is in progress. (wang)

    HDFS-8818. Changes the global moveExecutor to per datanode executors and
    changes MAX_SIZE_TO_MOVE to be configurable.  (szetszwo)

    HDFS-8824. Do not use small blocks for balancing the cluster.  (szetszwo)

    HDFS-8883. NameNode Metrics : Add FSNameSystem lock Queue Length.
    (Anu Engineer via xyao)

    HDFS-8880. NameNode metrics logging. (Arpit Agarwal)

    HDFS-8278. When computing max-size-to-move in Balancer, count only the
    storage with remaining >= default block size.  (szetszwo)

    HDFS-8826. In Balancer, add an option to specify the source node list
    so that balancer only selects blocks to move from those nodes.  (szetszwo)

    HDFS-8911. NameNode Metric : Add Editlog counters as a JMX metric.
    (Anu Engineer via Arpit Agarwal)

    HDFS-7923. The DataNodes should rate-limit their full block reports by
    asking the NN on heartbeat messages (cmccabe)

    HDFS-4185. Add a metric for number of active leases.
    (Rakesh R via raviprak)

    HDFS-8983. NameNode support for protected directories. (Arpit Agarwal)

    HDFS-8046. Allow better control of getContentSummary (kihwal)

    HDFS-8797. WebHdfsFileSystem creates too many connections for pread. (jing9)

    HDFS-8180. AbstractFileSystem Implementation for WebHdfs. (snayak via jghoman)

    HDFS-8846. Add a unit test for INotify functionality across a layout
    version upgrade (Zhe Zhang via Colin P. McCabe)

  OPTIMIZATIONS

    HDFS-8856. Make LeaseManager#countPath O(1). (Arpit Agarwal)

  BUG FIXES
